Working on 'isComplete' button

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -24,7 +24,10 @@
             <label for="location">Location:</label>
             <input type="text" id="location"/>
           </div>
-
+          <div>
+            <label for="status">Completed:  answer true/false</label>
+            <input type="text" id="isComplete"/>
+          </div>
 
           <input type="submit" value="Save" id="save"/>
         </form>
