--- a/client/public/index.html
+++ b/client/public/index.html
@@ -13,7 +13,7 @@
         <h2>Add an Entry</h2>
         <form id="entries-form">
           <div>
-            <label for="entry">Entries:</label>
+            <label for="entry">Activity:</label>
             <input type="text" id="activity"/>
           </div>
           <div>
@@ -25,7 +25,7 @@
             <input type="text" id="location"/>
           </div>
           <div>
-            <label for="status">Completed:  answer true/false</label>
+            <label for="status">Completed (true/false):</label>
             <input type="text" id="isComplete"/>
           </div>
 
